[A11y] fix skip-link z-index

--- a/src/pretix/static/pretixpresale/scss/main.scss
+++ b/src/pretix/static/pretixpresale/scss/main.scss
@@ -76,6 +76,7 @@ html {
     clip: auto;
 }
 #skip-to-main {
+    z-index: 9999;
     /* padding is needed to make focus-outline visible */
     padding: 8px;
     background-color: inherit;
